# claude-web-remote

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  roadmap.md
.github/workflows/: release.yml
crates/server/: Cargo.toml  build.rs
crates/server/src/: api.rs  config.rs  diagnostics.rs  embedded_assets.rs  error.rs  event.rs  lib.rs  main.rs  permission.rs  process.rs  session.rs  store.rs  task.rs  worktree.rs
crates/server/tests/: api_integration.rs  fake_claude.rs
docs/release/: README.release.md  config.example.toml
docs/superpowers/plans/: 2026-06-11-claude-remote-web.md  (+24 more)
scripts/: start-server.sh  test-start-server.sh
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: README.md  visual.spec.ts
web/src/: ActivityPanel.test.tsx  ActivityPanel.tsx  App.css  App.test.tsx  App.tsx  AppShell.tsx  Composer.tsx  ConfigView.css  ConfigView.test.tsx  ConfigView.tsx  ConversationBlockList.css  ConversationBlockList.test.tsx  ConversationBlockList.tsx  ConversationWorkspace.tsx  EventCard.test.tsx  EventCard.tsx  InspectorPanel.tsx  PermissionActionCard.test.tsx  PermissionActionCard.tsx  PreviewPanel.test.tsx  PreviewPanel.tsx  ProjectHome.tsx  RawEventDetails.tsx  SessionSidebar.tsx  TasksPanel.css  TasksPanel.test.tsx  TasksPanel.tsx  activityTimeline.test.ts  activityTimeline.ts  api.ts  autocomplete.test.ts  autocomplete.ts  conversationBlocks.test.ts  conversationBlocks.ts  darkModeCss.test.ts  eventDisplay.test.ts  eventDisplay.ts  keyboardShortcuts.ts  permissionEvents.test.ts  permissionEvents.ts  (+15 more)
(+26 files in other folders)
